# PINN

./: .coverage  .gitignore  DIAGNOSIS_REPORT.md  README.md  analytical_solution_dirichlet.py  check_pinn_amplitude.py  diagnose_initial_velocity.py  diagnose_wave_split.py  fix_initial_velocity_loss_weights.md  forward_test.py  main.py  pyproject.toml  quick_comparison_test.py  test_analytical_solution.py  test_analytical_solution_v2.py  test_fourier_causal.py  test_reflection.py  test_reflection_detailed.py  verify_analytical.py  verify_dirichlet_solution.py  verify_neumann_bc.py
configs/: 2d_elastic_wave.yaml  README.md  dirichlet_bc_example.yaml  neumann_bc_example.yaml  pinn_2d_example.yaml  standing_wave_example.yaml  traveling_wave_example.yaml  traveling_wave_improved.yaml
docs/: loss_weight_validation.md
notebooks/: experiment_report.md  experiment_runner.py  improvement_report.md  pinn_2d_forward_validation.ipynb  run_improved_experiment.py  run_traveling_wave_analysis.py  run_traveling_wave_with_reflections.py  traveling_wave_analysis.ipynb  traveling_wave_enhanced.ipynb  traveling_wave_right.ipynb  traveling_wave_single_direction.ipynb  wave_1d_demo.ipynb  wave_1d_improved.ipynb  wave_2d_forward_demo.ipynb
pinn/: README.md  __init__.py
ref/: PINN_FDTD3.py  sampling_utils.py  sourse_new.py
scripts/: clean_notebook_metadata.py  fix_notebook_data_path.py
src/: data.py  evaluation.py  pinn.py  training.py
tests/: mock_data.npz  test_data.py  test_evaluation.py  test_main.py  test_notebook_error_analysis.py  test_notebook_execution.py  test_pinn.py  (+6 more)
(+140 files in other folders)
