[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "2.4.0", source = "torch_cu124"}
torchvision = {version = "0.19.0", source = "torch_cu124"}
torchaudio = {version = "2.4.0", source = "torch_cu124"}
numpy = "<2.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
cupy-cuda12x = "^13.3.0"
japanize-matplotlib = "^1.1.3"
visualkeras = "^0.1.4"
hiddenlayer = "^0.3"
torchviz = "^0.0.3"
graphviz = "^0.21"
h5py = "^3.14.0"
tqdm = "^4.67.1"
sampling-utils = "^0.1.1"
seaborn = "^0.13.2"
deepxde = "^1.15.0"
ruff = "^0.14.9"
pydantic = "^2.12.5"


[[tool.poetry.source]]
name = "torch_cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.14.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
